# interview-prep-coach

./: .gitignore  CLAUDE.md  DISTRIBUTION.md  Dockerfile.test  LICENSE  README.md  install.sh  pyproject.toml
src/interview_prep_coach/: __init__.py  __version__.py  _sqlite_compat.py  _version_check.py  cli.py  server.py
src/interview_prep_coach/config/: __init__.py  installer.py  paths.py
src/interview_prep_coach/core/: __init__.py  database.py  improvements.py  material_editor.py  plugin_manager.py  progress.py  questions.py  schema.py
src/interview_prep_coach/data/: improvement-log-template.json  interview-coach-agent-prompt.md  interview-prep-java-spring-infra.md  learning-progress-template.json  schema.sql
src/interview_prep_coach/plugins/: __init__.py  base.py  importers.py
src/interview_prep_coach/plugins/bundled/: __init__.py  java_spring_importer.py
tests/: test_bundled_material_import.py  test_database.py  test_improvements.py  test_material_editor.py  test_progress_tracker.py  test_question_parser.py
